--- a/src/main/resources/templates/generico/produtos.html
+++ b/src/main/resources/templates/generico/produtos.html
@@ -15,9 +15,15 @@
 </head>
 <body>
     <main>
+        <form class="modal-form">
         <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Produtos</button>
+        <div class="form-group">
+            <input type="text" class="modal-field" placeholder="">
+            <button type="button" class="button cyan">Pesquisar</button>
+        </div>
         <table class="records">
             <thead>
+            </form>
                 <tr>
                   <th>NOME</th>
                   <th>CÓDIGO</th>
