--- a/src/main/resources/templates/generico/fornecedor.html
+++ b/src/main/resources/templates/generico/fornecedor.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/records.css">
     <link rel="stylesheet" href="css/modal.css">
     <script src="js/main.js" defer></script>
-    <title>CRUD</title>
+    <title>Fornecedores</title>
     </head>
 
     <body>
@@ -28,16 +28,16 @@
             <thead>
                 <tr>
                     <th>NOME</th>
-                    <th>ENDERECO</th>
-                    <th>TEL</th>
+                    <th>TELEFONE</th>
+                    <th>CNPJ</th>
                     <th>AÇÃO</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="cliente: ${clientes}">
-                    <td th:text="${cliente.nome}"></td>
-                    <td th:text="${cliente.endereco}"></td>
-                    <td th:text="${cliente.tel}"></td>
+                <tr th:each="fornecedor: ${fornecedores}">
+                    <td th:text="${fornecedor.nome}"></td>
+                    <td th:text="${fornecedor.tel}"></td>
+                    <td th:text="${fornecedor.cnpj}"></td>
 
                     <td>
                         <button type="button" class="button green">editar</button>
