--- a/src/main/resources/templates/generico/ordemdeServico.html
+++ b/src/main/resources/templates/generico/ordemdeServico.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/records.css">
     <link rel="stylesheet" href="css/modal.css">
     <script src="js/main.js" defer></script>
-    <title>CRUD</title>
+    <title>O.S</title>
 </head>
 <body>
     <main>
@@ -25,17 +25,17 @@
             <thead>
             </form>
                 <tr>
-                  <th>NOME</th>
-                  <th>ENDERECO</th>
-                  <th>TEL</th>
+                  <th>O.S</th>
+                  <th>VALOR</th>
+                  <th>DATA</th>
                   <th>AÇÃO</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="cliente: ${clientes}">
-                    <td th:text="${cliente.nome}"></td>
-                    <td th:text="${cliente.endereco}"></td>
-                    <td th:text="${cliente.tel}"></td>
+                <tr th:each="ordemServico: ${ordemServicos}">
+                    <td th:text="${ordemServico.num_os}"></td>
+                    <td th:text="${ordemServico.valor_total}"></td>
+                    <td th:text="${ordemServico.data_cadastro}"></td>
                     
                     <td>
                         <button type="button" class="button green">editar</button>
