--- a/src/main/resources/templates/generico/produtos.html
+++ b/src/main/resources/templates/generico/produtos.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/records.css">
     <link rel="stylesheet" href="css/modal.css">
     <script src="js/main.js" defer></script>
-    <title>CRUD</title>
+    <title>Produtos</title>
 </head>
 <body>
     <main>
@@ -25,17 +25,17 @@
             <thead>
             </form>
                 <tr>
-                  <th>NOME</th>
                   <th>CÓDIGO</th>
-                  <th>PREÇO CUSTO</th>
+                  <th>TIPO</th>
+                  <th>NOME</th>
                   <th>AÇÃO</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="cliente: ${clientes}">
-                    <td th:text="${cliente.nome}"></td>
-                    <td th:text="${cliente.endereco}"></td>
-                    <td th:text="${cliente.tel}"></td>
+                <tr th:each="produto: ${produtos}">
+                    <td th:text="${produto.codigo}"></td>
+                    <td th:text="${produto.outros}"></td>
+                    <td th:text="${produto.nome}"></td>
                     
                     <td>
                         <button type="button" class="button green">editar</button>
